--- a/02 Python Intro/python_intro.ipynb
+++ b/02 Python Intro/python_intro.ipynb
@@ -1056,6 +1056,33 @@
    "source": [
     "my_module.theAnswer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n",
+      "2.718281828459045\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "print(math.pi)\n",
+    "print(math.e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
