New notes for unit 3

--- a/01 Linear Regression/linear-regression.ipynb
+++ b/01 Linear Regression/linear-regression.ipynb
@@ -7,7 +7,7 @@
     "##### Aka the Hello World of Data Science\n",
     "# Linear Regression\n",
     "A simple **Linear Regression** model tries to explain the relationship between two vairables using best fitting stratight line called a **regression line**.\n",
-    "The variable on the _x-axis is the Independent Variable_, it predicts the value of the _Dependent variable on the y-axis_.\n",
+    "The variable on the _x-axis is the Independent Variable or Feature_, it predicts the value of the _Dependent variable or Target on the y-axis_.\n",
     "he value on the y-axis is the Dependent Variable.\n",
     "\n",
     "![example](lin-regress-ex.png)  \n",
