Took more notes

--- a/03 Gradient Descent Algorithm/gradient_descent.ipynb
+++ b/03 Gradient Descent Algorithm/gradient_descent.ipynb
@@ -310,6 +310,143 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 2 - Multiple Minima vs Initial Guess\n",
+    "We will be working with the following cost function:\n",
+    "\n",
+    "$$g(x) = x^4 - 4x^2 + 5$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def g(x):\n",
+    "    return (x**4) - 4*(x**2) + 5\n",
+    "\n",
+    "def dg(x):\n",
+    "    return 4*(x**3) - 8*(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_2 = np.linspace(-2, 2, 1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gradient Descent Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_gradient_descent(derivative_func, initial_guess, learning_rate=0.02, precision=0.001):\n",
+    "    new_x = initial_guess # Our random guess\n",
+    "    previous_x = 0\n",
+    "    step_multiplier = learning_rate\n",
+    "    learning_steps = []\n",
+    "    gradients_list = []\n",
+    "\n",
+    "    for n in range(500): # Our secondary stopping condition\n",
+    "        previous_x = new_x\n",
+    "        gradient = derivative_func(previous_x) # Find the gradient\n",
+    "\n",
+    "        learning_steps.append(new_x)\n",
+    "        gradients_list.append(gradient)\n",
+    "\n",
+    "        new_x = previous_x - step_multiplier * gradient # Modify our parameter\n",
+    "        step_size = abs(new_x - previous_x) # Fine tuning our learning rate\n",
+    "\n",
+    "        if (step_size < precision): # Our primary stopping condition\n",
+    "            break\n",
+    "\n",
+    "    return new_x, learning_steps, gradients_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_min, x_list, deriv_list = find_gradient_descent(derivative_func=dg, initial_guess=0)\n",
+    "print('Local mininum occurs at: ', local_min)\n",
+    "print('Number of steps: ', len(x_list))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plotting our data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=[15, 5])\n",
+    "\n",
+    "plt.subplot(1, 3, 1) # same row, two columns, index\n",
+    "plt.plot(x_2, g(x_2), linewidth=3, alpha=0.6)\n",
+    "plt.title('Cost Function')\n",
+    "plt.grid()\n",
+    "plt.xlim(-2, 2)\n",
+    "plt.ylim(-3, 6)\n",
+    "plt.xlabel('X', fontsize=16)\n",
+    "plt.ylabel(\"g(x)\", fontsize=16)\n",
+    "\n",
+    "# learning_steps_array = np.array(x_list)\n",
+    "plt.scatter(x_list, g(np.array(x_list)), color='red', s=40)\n",
+    "\n",
+    "# Chart 2: Derivative\n",
+    "plt.subplot(1, 3, 2)\n",
+    "plt.title('Slope of Cost Function')\n",
+    "plt.plot(x_2, dg(x_2), c='skyblue', linewidth=3, alpha=0.6)\n",
+    "plt.grid()\n",
+    "plt.xlim(-2, 2)\n",
+    "plt.ylim(-3, 6)\n",
+    "plt.xlabel('X', fontsize=16)\n",
+    "plt.ylabel('dg(x)', fontsize=16)\n",
+    "\n",
+    "# learning_steps_array = np.array(x_list)\n",
+    "plt.scatter(x_list, deriv_list, color='red', s=40)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our algorithm isn't perfect, it has some weaknesses. We get a different local minimum depending on our intial guess. Also our algorithm can't tell the difference between a local and global minimum.\n",
+    "\n",
+    "Every gradient descent algorithm has its strengths and weaknesses.\n",
+    "\n",
+    "### Batch Gradient Descent\n",
+    "\n",
+    "\n",
+    "### Straocht Gradient Descent\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
