--- a/Jose Portilla Course/02 Numpy Overview/numpy_overview.ipynb
+++ b/Jose Portilla Course/02 Numpy Overview/numpy_overview.ipynb
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.rand(5) # returns a 1D array of with random values\n",
+    "np.random.rand(5) # returns a 1D array of with random values between 0 and 1\n",
     "np.random.rand(5, 5) # returns a 2D array of with random values"
    ]
   },
@@ -308,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 ('.venv': venv)",
+   "display_name": "Python 3.9.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -322,12 +322,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c87afb1b8aa3ce47ffab5c38e6e395088d09aeccb9c5f5a7062dac7e2d1103a6"
+    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
    }
   }
  },
