--- a/Python/Jose Portilla Course/03 Pandas Overview/pandas_exercises/sf_salaries_exercise.ipynb
+++ b/Python/Jose Portilla Course/03 Pandas Overview/pandas_exercises/sf_salaries_exercise.ipynb
@@ -291,16 +291,11 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# df['col'].eq('exact_string')).any() CHECK FOR EXTRACT STRING\n",
+    "# df['col'].str.contains('partial_string').any() PARTIAL STRING\n",
+    "sal['JobTitle'].str.contains('Chief').sum()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -337,7 +332,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit",
+   "display_name": "Python 3.10.5 ('.venv')",
    "language": "python",
    "name": "python3"
   },
@@ -351,11 +346,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.5"
   },
   "vscode": {
    "interpreter": {
-    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+    "hash": "c87afb1b8aa3ce47ffab5c38e6e395088d09aeccb9c5f5a7062dac7e2d1103a6"
    }
   }
  },
