Finished bonus question

--- a/Python/Jose Portilla Course/03 Pandas Overview/pandas_exercises/sf_salaries_exercise.ipynb
+++ b/Python/Jose Portilla Course/03 Pandas Overview/pandas_exercises/sf_salaries_exercise.ipynb
@@ -311,16 +311,12 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Correct answer\n",
+    "sal['TitleLength'] = sal['JobTitle'].apply(len)\n",
+    "sal[['TotalPayBenefits', 'TitleLength']].corr() \n",
+    "# There is no correlation"
+   ]
   },
   {
    "cell_type": "markdown",
