--- a/Python/Jose Portilla Course/10 Data Capstone Projects/911_calls_data_capstone_project.ipynb
+++ b/Python/Jose Portilla Course/10 Data Capstone Projects/911_calls_data_capstone_project.ipynb
@@ -729,15 +729,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shannondell.head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "sdTopFiveMonths = shannondell['month'].value_counts().head(5).index\n",
     "sdTopFiveMonths"
    ]
@@ -746,7 +737,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### What Type of 911 Call was the biggest in the Top 3 Months"
+    "#### What Type of 911 Call were the biggest in the Top 3 Months"
    ]
   },
   {
@@ -783,7 +774,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### What type of EMS was the Most Common in the Top 3 Months"
+    "##### What type of EMS were the Most Common in the Top 3 Months"
    ]
   },
   {
@@ -793,11 +784,28 @@
    "outputs": [],
    "source": [
     "sdJanuaryReasons = sdJanuary[ sdJanuary['reason'] == 'EMS']['title'].value_counts()\n",
-    "plt.figure(figsize=(14, 8))\n",
-    "sdJanuaryReasons.plot.pie()\n",
+    "\n",
+    "plt.figure(figsize=(15, 10))\n",
+    "sdJanuaryReasons.plot.pie(autopct='%1.1f%%')\n",
+    "\n",
     "axes = plt.gca()\n",
     "axes.set_title('Most Common Types 911 Calls From Shannondell Dr & Blvd During the January')\n",
+    "axes.set_ylabel('')\n",
     "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Is there a Correaltion between EMS and Date in Shannondell"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating the pivot table"
    ]
   },
   {
@@ -806,19 +814,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shannondell = df[df['addr'] == 'SHANNONDELL DR & SHANNONDELL BLVD']\n",
-    "shannondellByDate = shannondell.groupby(by='month')['lat']\n",
-    "shannondellByDate\n",
-    "# plt.figure(figsize=(12, 6))\n",
-    "# shannondellByDate.plot.line(x='month')\n",
+    "pvSdMonthTitle = shannondell.groupby(by=['month', 'title']).count()['lat'].unstack()\n",
+    "pvSdMonthTitle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pvSdMonthTitle.fillna(value=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(15, 10))\n",
+    "sns.heatmap(data=pvSdMonthTitle, annot=True)\n",
     "\n",
-    "# axes = plt.gca()\n",
-    "# axes.set_title('911 Calls From Shannondell Dr & Blvd During the Months')\n",
-    "# axes.set_ylabel('Number of 911 Calls')\n",
-    "# axes.set_xlabel('Month')\n",
-    "# axes.set_xlim([1, 12])\n",
-    "# axes.set_ylim([70, 140])\n",
-    "# plt.tight_layout()\n"
+    "axes = plt.gca()\n",
+    "axes.set_title('Months EMS Appear In')\n",
+    "axes.set_ylabel('Month')\n",
+    "axes.set_xlabel('Title')\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Zooming in on the top 3 EMS reasons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sdTop3Reasons = shannondell[(shannondell['title'] == 'EMS: CARDIAC EMERGENCY') |\n",
+    "            (shannondell['title'] == 'EMS: FALL VICTIM') | \n",
+    "            (shannondell['title'] == 'EMS: MEDICAL ALERT ALARM')]\n",
+    "\n",
+    "pvsdTop3ReasonsMonthTitle = sdTop3Reasons.groupby(\n",
+    "    by=['month', 'title']).count()['lat'].unstack()\n",
+    "pvsdTop3ReasonsMonthTitle\n",
+    "\n",
+    "plt.figure(figsize=(6, 6))\n",
+    "sns.heatmap(data=pvsdTop3ReasonsMonthTitle, annot=True)\n",
+    "\n",
+    "axes = plt.gca()\n",
+    "axes.set_title('Months EMS Appear In')\n",
+    "axes.set_ylabel('Month')\n",
+    "axes.set_xlabel('Title')\n",
+    "plt.tight_layout()"
    ]
   }
  ],
