--- a/Python/Jose Portilla Course/10 Data Capstone Projects/911_calls_data_capstone_project.ipynb
+++ b/Python/Jose Portilla Course/10 Data Capstone Projects/911_calls_data_capstone_project.ipynb
@@ -774,7 +774,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### What type of EMS were the Most Common in the Top 3 Months"
+    "##### What type of EMS were the Most Common in January"
    ]
   },
   {
