First First section

--- a/Julia/Dr Huda Nassar Course/01 Handling Data.ipynb
+++ b/Julia/Dr Huda Nassar Course/01 Handling Data.ipynb
@@ -360,6 +360,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`.==`\n",
+    "This is a Vectorized dot operation and is used to apply the operator to an array. This is check for equality"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -378,12 +386,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Q1: Which year was was a given language invented?\n"
+    "## Processing Matrix"
    ]
   },
   {
@@ -391,15 +397,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Q2: How many languages were created in a given year?\n"
+    "# Q1: Which year was was a given language invented?\n",
+    "function yearcreated(language::String)\n",
+    "    try\n",
+    "        loc = findfirst(P[:, 2] .== language) # find col where lang == lang\n",
+    "        return P[loc, 1]\n",
+    "    catch\n",
+    "        println(\"Error: Language not found in data\")\n",
+    "    end\n",
+    "end"
    ]
   },
   {
@@ -407,7 +414,308 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "yearcreated(\"Julia\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yearcreated(\"Java\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yearcreated(\"Type Script\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q2: How many languages were created in a given year?\n",
+    "function langcreatedinyear(year::Int64)\n",
+    "    try\n",
+    "        langs = findall(P[:, 1] .== year) # find cols where year == year\n",
+    "        return length(langs)\n",
+    "    catch\n",
+    "        println(\"Error: year not found in data\")\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "langcreatedinyear(1958)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "langcreatedinyear(1962)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "langcreatedinyear(1995)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Processing DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Pdf = DataFrame(year=P[:, 1], language=P[:, 2]) # Turning matrix to df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Pdf[1:5, :year]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q1: Which year was was a given language invented?\n",
+    "function yearcreateddf(lang::String)\n",
+    "    try\n",
+    "        loc = findfirst(Pdf.language .== lang)\n",
+    "        return Pdf.year[loc]\n",
+    "    catch\n",
+    "        println(\"Error: Language not found in data\")\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@show yearcreateddf(\"Ruby\")\n",
+    "@show yearcreateddf(\"Kotlin\")\n",
+    "@show yearcreateddf(\"F#\")\n",
+    "@show yearcreateddf(\"Rust\")\n",
+    "println()\n",
+    "@show yearcreateddf(\"FakeLang\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q2: How many languages were created in a given year?\n",
+    "function langcreatedinyeardf(year::Int64)\n",
+    "    return length(findall(Pdf.year.== year))\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@show langcreatedinyeardf(1958)\n",
+    "@show langcreatedinyeardf(1962)\n",
+    "@show langcreatedinyeardf(1995)\n",
+    "@show langcreatedinyeardf(2020)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Processing Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Dict([(\"A\", 1), (\"B\", 2), (1, [1, 2])]) # Making a dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "somedict = Dict{Integer, Vector{String}}() # Empty dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# somedict[\"julia\"] = 7 # this is not going to work."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "somedict[1] = [\"Wow\", \"Yum\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Pdict = Dict(pairs(eachcol(Pdf))) # Turning dataframe into a dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@show length(Pdict[:year])\n",
+    "@show length(unique(Pdict[:year]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Pdict[:year][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q1: Which year was was a given language invented?\n",
+    "function yearcreateddict(lang::String)\n",
+    "    try\n",
+    "        loc = findfirst(Pdict[:language].==lang)\n",
+    "        return Pdict[:year][loc]\n",
+    "    catch\n",
+    "        (\"Error: Language not found in data\")\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@show yearcreateddict(\"Ruby\")\n",
+    "@show yearcreateddict(\"Kotlin\")\n",
+    "@show yearcreateddict(\"F#\")\n",
+    "@show yearcreateddict(\"Rust\")\n",
+    "println()\n",
+    "@show yearcreateddict(\"FakeLang\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q2: How many languages were created in a given year?\n",
+    "function langcreatedinyeardict(year::Int64)\n",
+    "    try\n",
+    "        return length(findall(Pdict[:year].== year))\n",
+    "    catch\n",
+    "        (\"Error: Language not found in data\")\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@show langcreatedinyeardict(1958)\n",
+    "@show langcreatedinyeardict(1962)\n",
+    "@show langcreatedinyeardict(1995)\n",
+    "@show langcreatedinyeardict(2020)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 📝 Missing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Pdf[1, 1] = missing\n",
+    "Pdf[3, 1] = missing\n",
+    "Pdf[1:5, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropmissing(Pdf) # Doesnt save automatically, must reassign dataframe to this func output"
+   ]
   }
  ],
  "metadata": {
