--- a/Python/Jose Portilla Course/11 Linear Regression/linear_regression.ipynb
+++ b/Python/Jose Portilla Course/11 Linear Regression/linear_regression.ipynb
@@ -34,10 +34,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " Let's take the simplest possible example: calculating a regression with only 2 data points. All we're trying to do when we calculate our regression line is draw a line that's as close to every dot as possible. For classic linear regression, or \"Least Squares Method\", you only measure the closeness in the \"up and down\" direction \n",
+    "Let's take the simplest possible example: calculating a regression with only 2 data points. All we're trying to do when we calculate our regression line is draw a line that's as close to every dot as possible. For classic linear regression, or \"Least Squares Method\", you only measure the closeness in the \"up and down\" direction "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now wouldn't it be great if we could apply this same concept to a graph with more than just two data points? \n",
+    " \n",
+    "By doing this, we could take multiple men and their son's heights and do things like tell a man how tall we expect his son to be...before he even has a son"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our goal with linear regression is to minimize the vertical distance between all the data points and our line. \n",
     "\n",
+    "So in determining the best line, we are attempting to minimize the distance between all the points and their distance to our line"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are lots of different ways to minimize this, (sum of squared errors, sum of absolute errors, etc), but all these methods have a general goal of minimizing this distance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Linear Regression Equation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A simple linear regression model takes the following form:\n",
     "\n",
-    "\n"
+    "**ŷ = β0 + β1(x)**\n",
+    "\n",
+    "where:\n",
+    "\n",
+    "+ ŷ: The predicted value for the response variable\n",
+    "+ β0: The mean value of the response variable when x = 0\n",
+    "+ β1: The average change in the response variable for a one unit increase in x\n",
+    "+ x: The value for the predictor variable"
    ]
   },
   {
@@ -328,7 +373,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This should be close to a straight line"
+    "This should be close to a straight line. This is how we can tell how accurate our predictions are."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A histogram of the distrubition of our resdiuals."
    ]
   },
   {
@@ -344,13 +396,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This should be normally distributed"
+    "This should be normally distributed if our predictsions are close."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics.mean_absolute_error(y_test, predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics.mean_squared_error(y_test, predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sqrt(metrics.mean_squared_error(y_test, predictions))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit",
+   "display_name": "Python 3.10.5 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -364,12 +452,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+    "hash": "c87afb1b8aa3ce47ffab5c38e6e395088d09aeccb9c5f5a7062dac7e2d1103a6"
    }
   }
  },
