--- a/Python/Jose Portilla Course/10 Data Capstone Projects/finance_project.ipynb
+++ b/Python/Jose Portilla Course/10 Data Capstone Projects/finance_project.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,9 +132,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'bank_stocks' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\mokay\\Local-Repositories\\Machine-Learning-Bootcamp\\Python\\Jose Portilla Course\\10 Data Capstone Projects\\finance_project.ipynb Cell 13\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/mokay/Local-Repositories/Machine-Learning-Bootcamp/Python/Jose%20Portilla%20Course/10%20Data%20Capstone%20Projects/finance_project.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m bank_stocks\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnames \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mBank Ticker\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mStock Info\u001b[39m\u001b[39m'\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'bank_stocks' is not defined"
+     ]
+    }
+   ],
    "source": [
     "bank_stocks.columns.names = ['Bank Ticker','Stock Info']"
    ]
