--- a/Python/Jose Portilla Course/12 Logistical Regression/logistic_Regression_project.ipynb
+++ b/Python/Jose Portilla Course/12 Logistical Regression/logistic_Regression_project.ipynb
@@ -919,6 +919,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Age had the biggest effect on the odds of who clicked the ad or not."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Great Job!"
    ]
   }
